--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1e77i5E_EbFWIhysUbb03NuZnBA41370&ehbc=2E312F" width="640" height="480"></iframe>
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1e77i5E_EbFWIhysUbb03NuZnBA41370&ehbc=2E312F" width="100%" height="100%"></iframe>
